refactor: remove shared state from avatar tests